src/objects/Gamma_Mobile__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gamma Mobiles</relationshipLabel>
        <relationshipName>Gamma_Mobiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Iccid__c</fullName>
        <label>Iccid</label>
        <length>19</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Imei__c</fullName>
        <label>Imei</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Reponse__c</fullName>
        <label>Last_Reponse</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Request__c</fullName>
        <label>Last_Request</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Msisdn__c</fullName>
        <label>Msisdn</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pac_Code__c</fullName>
        <label>Pac Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Date__c</fullName>
        <label>Port Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Order Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provisioned</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Gamma Mobile</label>
    <nameField>
        <label>Gamma Mobile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gamma Mobiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>